# nexuslink

./: .gitattributes  .gitignore
nexuslink/: CLAUDE.md  PROGRESS.md  README.md  __init__.py  benchmark.py  cli.py  config.py  conftest.py  cycle.py  main.py  pyproject.toml  scratch.py  seed_manual.py  seed_vault.py
nexuslink/api/: __init__.py  app.py  deps.py
nexuslink/api/routes/: graph.py  hypothesis.py  ingest.py
nexuslink/demo/: __init__.py  mock_hypothesis.md  run_demo.py
nexuslink/docs/: architecture.md  funding_proposal.md
nexuslink/llm/: __init__.py
nexuslink/llm/hypothesis/: __init__.py  generator.py  pipeline.py
nexuslink/llm/prompts/: __init__.py  templates.py
nexuslink/llm/reports/: __init__.py  writer.py
nexuslink/llm/scoring/: __init__.py  ranker.py
nexuslink/llm/validation/: __init__.py  checker.py
nexuslink/mcp/: vault_server.py
nexuslink/raw/: __init__.py
nexuslink/raw/extraction/: __init__.py  entity_extractor.py
nexuslink/raw/ingestion/: __init__.py  arxiv_loader.py  pdf_loader.py  pipeline.py
nexuslink/raw/schemas/: __init__.py  models.py
nexuslink/raw/store/: __init__.py
nexuslink/tests/: __init__.py
nexuslink/tests/test_api/: test_routes.py
nexuslink/tests/test_integration/: test_e2e.py
nexuslink/tests/test_llm/: __init__.py  test_hypothesis.py
nexuslink/tests/test_raw/: __init__.py  test_pipeline.py
nexuslink/tests/test_wiki/: __init__.py  test_linker.py
nexuslink/ui/: __init__.py
nexuslink/utils/: json_parser.py
nexuslink/wiki/: __init__.py
nexuslink/wiki/.obsidian/: app.json  graph.json  (+1 more)
(+158 files in other folders)
